commit add the button functions

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             </div>
         </form>
         <section class="buttons">
-            <button title="A to Z">Sort <i class="fas fa-long-arrow-alt-down"></i></button>
-            <button>Most Populated <i class="fas fa-users"></i></button>
-            <button>Largest Area <i class="fas fa-expand"></i></button>
-            <button title="Z to A">Sort <i class="fas fa-long-arrow-alt-up"></i></button>
+            <button class="sort-az"title="A to Z">Sort <i class="fas fa-long-arrow-alt-down"></i></button>
+            <button class="most-populated">Most Populated <i class="fas fa-users"></i></button>
+            <button class="largest-area">Largest Area <i class="fas fa-expand"></i></button>
+            <button class="sort-za" title="Z to A">Sort <i class="fas fa-long-arrow-alt-up"></i></button>
         </section>
         <section class="main-container">
                     
