--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <span id="top-page"></span>
     <header>
-        <div class="parallax"><img src="/images/world.png" alt="parallax"></div>
+        <div class="parallax"><img src="https://images.pexels.com/photos/697662/pexels-photo-697662.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="parallax"></div>
         <div class="opacity"></div>
         <h1 class="main-title" id="main-title"><i class="fas fa-globe-europe"></i> World Countries <i class="fas fa-globe-americas"></i></h1>
     </header>
